--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/jansson"]
 	path = deps/jansson
 	url = https://github.com/akheron/jansson.git
+[submodule "deps/libevent"]
+	path = deps/libevent
+	url = https://github.com/nmathewson/Libevent.git
